--- a/index.html
+++ b/index.html
@@ -86,22 +86,16 @@
 				<form method="post" action="#">
 					<div class="fields">
 						<div class="field half">
-							<label for="name">Name</label>
-							<input type="text" name="name" id="name" />
+							<label for="name">TELEFONO</label>
+							<label type="text" name="name" id="name" >+54 9 11 30054596</label>
 						</div>
 						<div class="field half">
 							<label for="email">Email</label>
-							<input type="text" name="email" id="email" />
+							<label type="text" name="name" id="name" >coterafausto@gmail.com</label>
 						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="4"></textarea>
-						</div>
+						
 					</div>
-					<ul class="actions">
-						<li><input type="submit" value="Send Message" class="primary" /></li>
-						<li><input type="reset" value="Reset" /></li>
-					</ul>
+					
 				</form>
 				<ul class="icons">
 					<li><a href="https://www.linkedin.com/in/fausto-cotera-752554163/"> <i class="fab fa-linkedin"><span class="label"></span></i></a></li>
